tests/specs/graph/fast_check/cross_file_ref_module_not_found.txt
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/a.ts
export class A {
  member: string;
  member2: string;
}
export class Private2 {}

# https://jsr.io/@scope/a/1.0.0/b.ts
export { A as B } from "./a.ts";

export class Public1 {}

# https://jsr.io/@scope/a/1.0.0/mod.ts
import * as mod from "./b.ts";
import { Private2 } from "./a.ts";

export class Export {
  prop: typeof mod.B.prototype.notExistent;
}

# mod.ts
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "resolutionMode": "import",
            "span": {
              "start": {
                "line": 0,
                "character": 7
              },
              "end": {
                "line": 0,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "size": 81,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/a.ts"
    },
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "./a.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/a.ts",
            "resolutionMode": "import",
            "span": {
              "start": {
                "line": 0,
                "character": 23
              },
              "end": {
                "line": 0,
                "character": 31
              }
            }
          }
        }
      ],
      "size": 58,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/b.ts"
    },
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "./b.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/b.ts",
            "resolutionMode": "import",
            "span": {
              "start": {
                "line": 0,
                "character": 21
              },
              "end": {
                "line": 0,
                "character": 29
              }
            }
          }
        },
        {
          "specifier": "./a.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/a.ts",
            "resolutionMode": "import",
            "span": {
              "start": {
                "line": 1,
                "character": 25
              },
              "end": {
                "line": 1,
                "character": 33
              }
            }
          }
        }
      ],
      "size": 135,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a@*": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[not-found-reference]: could not resolve 'A.prototype.notExistent' referenced from '<unknown>'
   --> https://jsr.io/@scope/a/1.0.0/a.ts:1:1
    |
  1 | export class A {
    | ^^^^^^^^^^^^^^^^
    |
  2 |   member: string;
    | ^^^^^^^^^^^^^^^^^
    |
  3 |   member2: string;
    | ^^^^^^^^^^^^^^^^^^
    |
  4 | }
    | ^ this is the reference
    |
    = hint: fix the reference to point to a symbol that exists

    info: this error may be the result of a bug in Deno - if you think this is the case, please open an issue
    docs: https://jsr.io/go/slow-type-not-found-reference
